syntax = "proto3";

option csharp_namespace = "ProductionStructure.GrpcProtos";

package GrpcProtos;

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/Timestamp.proto";
import "Common/common.proto";

message WorkSessionDTO{
	Guid id = 1;
	google.protobuf.Timestamp initdate = 2;
	oneof kind{
		google.protobuf.NullValue null = 3;
		google.protobuf.Timestamp enddate = 4;
	}
	UnitDTO unit = 5;
	Guid unitid = 6;
}

message WorkSessions{
	repeated WorkSessionDTO items = 1;
}

message NullableWorkSessionDTO{
	oneof kind{
		google.protobuf.NullValue null = 1;
		WorkSessionDTO worksession = 2;
	}
}

message UnitDTO{
	string name = 1;
	WorkSessions worksessions = 2;
	bool inuse = 3;
	NullableString manufacturer = 4;
	NullableString description = 5;
	NullableWorkSessionDTO currentworksession = 6;
	NullableGuid currentworksessionid = 7;
	WorkCenterDTO workcenter = 8;
	Guid workcenterid = 9;
	Guid id = 10;
}

message Units{
	repeated UnitDTO items = 1;
}

message NullableUnitDTO{
	oneof kind{
		google.protobuf.Empty null = 1;
		UnitDTO unit = 2;
	}
}

message WorkCenterDTO{
	string name = 1;
	NullableString description = 2;
	WorkMode workmode = 3;
	Units units = 4;
	AreaDTO area = 5;
	Guid areaid = 6;
	Guid id = 7;
}

message WorkCenters{
	repeated WorkCenterDTO items = 1;
}

message NullableWorkCenterDTO{
	oneof kind{
		google.protobuf.Empty null = 1;
		WorkCenterDTO workcenter = 2;
	}
}

message AreaDTO{
	string name = 1;
	WorkCenters workcenters = 2;
	SiteDTO site = 3;
	Guid siteid = 4;
	Guid id = 5;
}

message Areas{
	repeated AreaDTO items = 1;
}

message NullableAreaDTO{
	oneof kind{
		google.protobuf.Empty null = 1;
		AreaDTO area = 2;
	}
}

message SiteDTO{
	Guid id = 1;
	string name = 2;
	Location location = 3;
	NullableEmail email = 4;
	NullablePhone phonenumber = 5;
	Areas areas = 6;
}

message Sites{
	repeated SiteDTO items = 1;
}

message NullableSiteDTO{
	oneof kind{
		google.protobuf.Empty null = 1;
		SiteDTO site = 2;
	}
}